demo-kubernetes-components/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: name
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - host: app.com
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: my-service
#               servicePort: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 8080
